# APC-Propeller-Finder

./: ClassAPC.py  Geometry.py  Performance.py  README.md  perftest.txt  pyproject.toml  text.txt  tutorial.ipynb
APC - Propeller Finder/APC - Geometry Data/: 18x55MRP.txt  APC _ GeometryData.zipx  APC20x10-PERF.PE0.txt  APC20x10E-PERF.PE0.txt  Airfoil.py  ChordTwist_Visualizer.py  ClassXFOIL.py  QPROP.py  qprop20x10E.txt
APC - Propeller Finder/APC - Geometry Data/XFOIL/: NACA4412_Re.txt  NACA4412_xfoil.txt
src/: ClassAPC.py  Geometry.py  Performance.py
src/Objects/: ClassAPC.py  Geometry.py  Performance.py
src/Search/: SearchTree.py
tutorial/: tutorial.ipynb
